# easy-cpp-onnx

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt  main.cpp
app2/: CMakeLists.txt  main.cpp
app_oop/: CMakeLists.txt  main.cpp
app_oop/src/include/: CMakeLists.txt  inferencer.h
app_oop/src/src/: CMakeLists.txt  inferencer.cpp  preprocessing.cpp  run.cpp
